k8s-init/ingress-service.yaml
# @format

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: '/api/?(.*)'
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
